Moved to separate components and started routing

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,1 @@
-<div class="container h-100">
-  <div class="row h-100 mx-0">
-    <div class="w-100 mx-auto searchbar-container text-center">
-      <img class="logo" src="../assets/img/logo.png">
-      <input class="form-control searchbar pl-3" type="text" placeholder="Summoner name...">
-    </div>
-  </div>
-</div>
+<router-outlet></router-outlet>
