--- a/src/app/components/summoner/summoner.component.html
+++ b/src/app/components/summoner/summoner.component.html
@@ -1,1 +1,9 @@
-<p>summoner works!</p>
+<div class="row my-5">
+  <div class="col-2">
+
+  </div>
+  <div class="col-8">
+    <h1 class="summoner-name">KoH Yoxh</h1>
+    <h3>Lo que sea</h3>
+  </div>
+</div>
