--- a/src/app/components/summoner/summoner.component.html
+++ b/src/app/components/summoner/summoner.component.html
@@ -1,9 +1,9 @@
-<div class="row my-5">
+<div class="row my-5 mx-5">
   <div class="col-2">
-
+    <img src="../../../assets/img/profileicon/{{ iconId }}.png" class="profile-icon">
   </div>
   <div class="col-8">
-    <h1 class="summoner-name">KoH Yoxh</h1>
-    <h3>Lo que sea</h3>
+    <h1 class="summoner-name mb-0">{{ summonerName }}</h1>
+    <h3 class="summoner-level">Lv. {{ level }}</h3>
   </div>
 </div>
