--- a/src/app/components/summoner/summoner.component.scss
+++ b/src/app/components/summoner/summoner.component.scss
@@ -1,6 +1,16 @@
+.profile-icon {
+  width: 100%;
+  border-radius: 10px;
+}
+
 .summoner-name {
   font-family: 'Roboto';
   font-size: 50px;
   font-weight: bold;
   color: white;
+}
+
+.summoner-level {
+  font-size: 20px;
+  color: azure;
 }
